fixed tests of ScalaFx in IntelliJ and also added some tests for the Launcher Object